--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="cyanea_primary_reference">#0288D1</color>
+    <color name="cyanea_accent_reference">#FFA000</color>
+    <color name="cyanea_background_light">#EBE5D9</color>
+    <color name="cyanea_background_light_darker">#D4D4D4</color>
+    <color name="cyanea_background_light_lighter">#EEE8DE</color>
 </resources>
