--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map_fragment_container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Fragments.MapFragment">
+             xmlns:tools="http://schemas.android.com/tools"
+             android:id="@+id/map_fragment_container"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             tools:context=".Activities.MainActivity">
 
 </FrameLayout>
