--- a/app/src/main/res/layout/fragment_stop_details.xml
+++ b/app/src/main/res/layout/fragment_stop_details.xml
@@ -5,7 +5,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Fragments.StopDetailsFragment">
+        tools:context=".Activities.MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
