Got recycler view for stop details view to work with LiveData and did some clean-up

--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -6,7 +6,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Activities.MainActivity">
+        tools:context=".activities.MainActivity">
 
     <TextView
             android:id="@+id/more_text"
@@ -32,7 +32,7 @@
             app:layout_constraintBottom_toTopOf="@+id/button"/>
 
     <Button
-            android:text="Button"
+            android:text="Test Stop Details"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/button"
