--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -4,6 +4,6 @@
              android:id="@+id/map_fragment_container"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".Activities.MainActivity">
+             tools:context=".activities.MainActivity">
 
 </FrameLayout>
