--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,17 +3,17 @@
     <item
             android:id="@+id/navigation_favorites"
             android:icon="@drawable/ic_favorite_black_24dp"
-            android:title="Favorites"/>
+            android:title="@string/favorites_destination_title"/>
     <item
             android:id="@+id/navigation_map"
             android:icon="@drawable/ic_map_black_24dp"
-            android:title="Map"/>
+            android:title="@string/map_destination_title"/>
     <item
             android:id="@+id/navigation_search"
             android:icon="@drawable/ic_search_black_24dp"
-            android:title="Search"/>
+            android:title="@string/search_destination_title"/>
     <item
             android:id="@+id/navigation_more"
             android:icon="@drawable/ic_more_horiz_black_24dp"
-            android:title="More"/>
+            android:title="@string/more_destination_title"/>
 </menu>
