--- a/app/src/main/res/layout/row_view.xml
+++ b/app/src/main/res/layout/row_view.xml
@@ -18,7 +18,9 @@
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"
             android:text="23"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"/>
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
             android:layout_width="wrap_content"
@@ -29,7 +31,9 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/line_text"
             android:text="PARQUE VENECIA"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintBottom_toTopOf="@+id/first_time_text"/>
 
     <TextView
             android:text="2 minutos"
@@ -40,7 +44,9 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/line_text"
             android:id="@+id/first_time_text"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintBottom_toTopOf="@+id/second_time_text"/>
 
     <TextView
             android:text="4 minutos"
@@ -51,6 +57,9 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/line_text"
             android:layout_marginTop="8dp"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
