--- a/app/src/main/res/drawable/ic_search_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_search_black_24dp.xml
@@ -1,10 +1,28 @@
-<?xml version="1.0" encoding="utf-8"?>
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0">
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:name="vector"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
     <path
-            android:fillColor="#FF000000"
-            android:pathData="M15.5,14h-0.79l-0.28,-0.27C15.41,12.59 16,11.11 16,9.5 16,5.91 13.09,3 9.5,3S3,5.91 3,9.5 5.91,16 9.5,16c1.61,0 3.09,-0.59 4.23,-1.57l0.27,0.28v0.79l5,4.99L20.49,19l-4.99,-5zM9.5,14C7.01,14 5,11.99 5,9.5S7.01,5 9.5,5 14,7.01 14,9.5 11.99,14 9.5,14z"/>
+        android:name="path_2"
+        android:pathData="M 13.321 13.49 C 11.111 15.605 7.616 15.537 5.512 13.34 C 3.407 11.14 3.491 7.645 5.699 5.53 C 7.909 3.415 11.404 3.483 13.51 5.682 C 15.614 7.881 15.529 11.375 13.321 13.49 Z"
+        android:fillColor="#000000"
+        android:fillAlpha="0"
+        android:strokeColor="#000000"
+        android:strokeWidth="2"
+        android:trimPathStart="0.0001"
+        android:trimPathEnd="0"/>
+    <group
+        android:name="group"
+        android:pivotX="12"
+        android:pivotY="12">
+        <path
+            android:name="path"
+            android:pathData="M 19.817 19.749 L 12.656 12.691"
+            android:fillColor="#000000"
+            android:strokeColor="#000000"
+            android:strokeWidth="2"/>
+    </group>
 </vector>
