Finished bottom navigation icons animations

--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -6,7 +6,7 @@
             android:title="@string/favorites_destination_title"/>
     <item
             android:id="@+id/navigation_map"
-            android:icon="@drawable/ic_map_black_24dp"
+            android:icon="@drawable/animation_map"
             android:title="@string/map_destination_title"/>
     <item
             android:id="@+id/navigation_search"
