--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.jorkoh.transportezaragozakt.navigation.AnimableConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/map_fragment_container"
@@ -7,4 +7,4 @@
         android:layout_height="match_parent"
         tools:context=".activities.MainActivity">
 
-</com.jorkoh.transportezaragozakt.navigation.AnimableConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
