--- a/app/src/main/res/values/config.xml
+++ b/app/src/main/res/values/config.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- The duration (in milliseconds) of a short animation. -->
+    <!-- The duration (in milliseconds) of a very short animation. -->
     <integer name="config_veryShortAnimTime">150</integer>
 </resources>
