--- a/app/src/main/res/layout/stop_row.xml
+++ b/app/src/main/res/layout/stop_row.xml
@@ -9,11 +9,12 @@
         android:background="?android:attr/selectableItemBackground"
         tools:context=".activities.MainActivity">
 
-    <TextView
+    <ImageView
             xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/type_text"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:id="@+id/type_image"
+            android:src="@drawable/ic_tram"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
@@ -23,17 +24,20 @@
             app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/title_text"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/type_text"
+            app:layout_constraintStart_toEndOf="@+id/type_image"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
             app:layout_constraintHorizontal_bias="0.5"
             android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:gravity="center"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
