Kinda handled empty and error responses, now the user gets a message if there is no data available instead of crashing

--- a/app/src/main/res/layout/fragment_stop_details.xml
+++ b/app/src/main/res/layout/fragment_stop_details.xml
@@ -28,6 +28,19 @@
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
+    <TextView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/no_data_text"
+            android:text="No data available :("
+            android:gravity="center"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:visibility="gone"/>
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/favorite_fab"
             style="@style/Widget.MaterialComponents.FloatingActionButton"
