--- a/app/src/main/res/layout/stop_row.xml
+++ b/app/src/main/res/layout/stop_row.xml
@@ -14,12 +14,11 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:id="@+id/type_image"
-            android:src="@drawable/ic_tram"
+            android:contentDescription="Stop type"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
