--- a/app/src/main/res/layout/notification_custom.xml
+++ b/app/src/main/res/layout/notification_custom.xml
@@ -7,7 +7,7 @@
     <ImageView
             android:src="@drawable/ic_bus"
             android:id="@+id/image"
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="fill_parent"
             android:layout_alignParentStart="true"
             android:layout_marginEnd="10dp"/>
