--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -19,14 +19,26 @@
             app:layout_constraintVertical_bias="0.0"/>
 
     <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/animation_view"
+            android:id="@+id/no_favorites_animation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:lottie_rawRes="@raw/tumbleweed"
             app:lottie_loop="true"
             app:lottie_autoPlay="true"
+            android:scaleType="centerCrop"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="gone" app:layout_constraintVertical_bias="0.25"/>
+    <TextView
+            android:id="@+id/no_favorites_text"
+            android:text="@string/no_favorites"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/no_favorites_animation"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:textAppearance="@android:style/TextAppearance.Material.Headline"
+            android:visibility="gone" android:layout_marginTop="24dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
