--- a/app/src/main/res/layout/destination_row.xml
+++ b/app/src/main/res/layout/destination_row.xml
@@ -23,7 +23,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:textSize="60dp"
             android:textColor="@color/kinda_white"
-            tools:ignore="SpUsage"/>
+            tools:ignore="SpUsage" android:textAlignment="center"/>
 
     <TextView
             android:layout_width="wrap_content"
@@ -33,21 +33,22 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/line_text"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+            android:textAppearance="@android:style/TextAppearance.Material.Title"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintBottom_toTopOf="@+id/first_time_text"/>
+            app:layout_constraintBottom_toTopOf="@+id/first_time_text"
+            />
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/destination_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/line_text"
             android:id="@+id/first_time_text"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
+            android:textAppearance="@android:style/TextAppearance.Material.Medium"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintBottom_toTopOf="@+id/second_time_text"/>
+            app:layout_constraintBottom_toTopOf="@+id/second_time_text"
+            android:layout_marginTop="4dp"/>
 
     <TextView
             android:layout_width="wrap_content"
@@ -56,10 +57,10 @@
             app:layout_constraintTop_toBottomOf="@+id/first_time_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/line_text"
-            android:layout_marginTop="8dp"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
+            android:textAppearance="@android:style/TextAppearance.Material.Medium"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"/>
+            app:layout_constraintHorizontal_bias="0.5"
+            />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
