--- a/app/src/main/res/layout/destination_row.xml
+++ b/app/src/main/res/layout/destination_row.xml
@@ -6,7 +6,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".activities.MainActivity">
+        tools:context=".MainActivity">
 
     <TextView
             xmlns:android="http://schemas.android.com/apk/res/android"
