--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -5,6 +5,6 @@
         android:id="@+id/map_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activities.MainActivity">
+        tools:context="com.jorkoh.transportezaragozakt.destinations.map.MapFragment">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
