--- a/app/src/main/res/layout/stop_row.xml
+++ b/app/src/main/res/layout/stop_row.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?android:attr/selectableItemBackground"
-        tools:context=".activities.MainActivity">
+        tools:context=".MainActivity">
 
     <ImageView
             xmlns:android="http://schemas.android.com/apk/res/android"
