--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -28,7 +28,9 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.25"/>
+            app:layout_constraintVertical_bias="0.25"
+            android:visibility="gone"/>
+
     <TextView
             android:id="@+id/no_favorites_text"
             android:text="@string/no_favorites"
@@ -38,5 +40,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:textAppearance="@android:style/TextAppearance.Material.Headline"
-            android:layout_marginTop="24dp"/>
+            android:layout_marginTop="24dp"
+            android:visibility="gone"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
