Added and styled animated chips to filter markers on map, added two state button for map type with persistence. Fixed stuff

--- a/app/src/main/res/navigation/more_destination.xml
+++ b/app/src/main/res/navigation/more_destination.xml
@@ -11,11 +11,11 @@
             android:label="More"
             tools:layout="@layout/fragment_more">
         <action
-                android:id="@+id/action_more_to_cyaneaSettings"
-                app:destination="@+id/cyaneaSettings"/>
+                android:id="@+id/action_more_to_cyaneaThemePicker"
+                app:destination="@id/cyaneaThemePicker"/>
     </fragment>
     <fragment
-            android:id="@+id/cyaneaSettings"
-            android:name="com.jaredrummler.cyanea.prefs.CyaneaSettingsFragment"
-            android:label="CyaneaSettings"/>
+            android:id="@+id/cyaneaThemePicker"
+            android:name="com.jaredrummler.cyanea.prefs.CyaneaThemePickerFragment"
+            android:label="CyaneaThemePicker"/>
 </navigation>
