Worked on custom info windows for the markers. Didn't quite archive the end result I'm looking for but will get there eventually

--- a/app/src/main/res/navigation/more_destination.xml
+++ b/app/src/main/res/navigation/more_destination.xml
@@ -9,7 +9,7 @@
             android:id="@+id/more"
             android:name="com.jorkoh.transportezaragozakt.destinations.more.MoreFragment"
             android:label="More"
-            tools:layout="@layout/fragment_more">
+            tools:layout="@layout/more_destination">
         <action
                 android:id="@+id/action_more_to_cyaneaThemePicker"
                 app:destination="@id/cyaneaThemePicker"/>
