--- a/app/src/main/res/layout/favorite_row.xml
+++ b/app/src/main/res/layout/favorite_row.xml
@@ -33,7 +33,7 @@
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:id="@+id/type_image"
+                android:id="@+id/type_image_favorite"
                 android:contentDescription="@string/stop_type_content_description"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
@@ -45,15 +45,15 @@
         <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/title_text"
+                android:id="@+id/title_text_favorite"
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/type_image"
+                app:layout_constraintStart_toEndOf="@+id/type_image_favorite"
                 android:textAppearance="@android:style/TextAppearance.Material.Title"
                 android:gravity="center"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
-                app:layout_constraintEnd_toStartOf="@+id/edit_view"
+                app:layout_constraintEnd_toStartOf="@+id/edit_view_favorite"
                 android:textSize="18sp"/>
 
         <androidx.appcompat.widget.AppCompatButton
@@ -64,11 +64,11 @@
                 android:paddingTop="12dp"
                 android:paddingBottom="4dp"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/reorder_view"
+                app:layout_constraintBottom_toTopOf="@id/reorder_view_favorite"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:background="@android:color/transparent"
                 android:drawableBottom="@drawable/ic_edit_black_24dp"
-                android:id="@+id/edit_view"
+                android:id="@+id/edit_view_favorite"
                 />
 
         <androidx.appcompat.widget.AppCompatButton
@@ -78,12 +78,12 @@
                 android:paddingEnd="8dp"
                 android:paddingTop="4dp"
                 android:paddingBottom="12dp"
-                app:layout_constraintTop_toBottomOf="@id/edit_view"
+                app:layout_constraintTop_toBottomOf="@id/edit_view_favorite"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:background="@android:color/transparent"
                 android:drawableBottom="@drawable/ic_reorder_black_24dp"
-                android:id="@+id/reorder_view"
+                android:id="@+id/reorder_view_favorite"
                 />
 
 
