--- a/app/src/main/res/navigation/favorites_destination.xml
+++ b/app/src/main/res/navigation/favorites_destination.xml
@@ -9,7 +9,7 @@
             android:id="@+id/favorites"
             android:name="com.jorkoh.transportezaragozakt.destinations.favorites.FavoritesFragment"
             android:label="@string/favorites_destination_title"
-            tools:layout="@layout/fragment_favorites">
+            tools:layout="@layout/favorites_destination">
         <action
                 android:id="@+id/action_favorites_to_stopDetails"
                 app:destination="@id/stopDetails"/>
@@ -17,7 +17,7 @@
     <fragment
             android:id="@+id/stopDetails"
             android:name="com.jorkoh.transportezaragozakt.destinations.stop_details.StopDetailsFragment"
-            tools:layout="@layout/fragment_stop_details">
+            tools:layout="@layout/stop_details">
         <argument
                 android:name="stopType"
                 app:argType="string"/>
