--- a/app/src/main/res/navigation/map_destination.xml
+++ b/app/src/main/res/navigation/map_destination.xml
@@ -9,7 +9,7 @@
             android:id="@+id/map"
             android:name="com.jorkoh.transportezaragozakt.destinations.map.MapFragment"
             android:label="MapFragment"
-            tools:layout="@layout/fragment_map">
+            tools:layout="@layout/map_destination">
         <action
                 android:id="@+id/action_map_to_stopDetails"
                 app:destination="@id/stopDetails"/>
@@ -17,7 +17,7 @@
     <fragment
             android:id="@+id/stopDetails"
             android:name="com.jorkoh.transportezaragozakt.destinations.stop_details.StopDetailsFragment"
-            tools:layout="@layout/fragment_stop_details">
+            tools:layout="@layout/stop_details">
         <argument
                 android:name="stopType"
                 app:argType="string"/>
