--- a/app/src/main/res/layout/favorites_destination.xml
+++ b/app/src/main/res/layout/favorites_destination.xml
@@ -13,6 +13,7 @@
             android:layout_height="match_parent"
             android:paddingTop="4dp"
             android:clipToPadding="false"
+            android:nestedScrollingEnabled="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
