--- a/app/src/main/res/layout/favorite_row.xml
+++ b/app/src/main/res/layout/favorite_row.xml
@@ -21,16 +21,17 @@
         <View
                 android:id="@+id/favorite_color"
                 android:layout_width="10dp"
-                android:layout_height="80dp"
                 android:background="@android:color/transparent"
                 android:visibility="gone"
                 android:layout_marginStart="8dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_height="0dp"/>
 
         <ImageView
-                xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:id="@+id/type_image_favorite"
@@ -51,6 +52,8 @@
                 app:layout_constraintStart_toEndOf="@+id/type_image_favorite"
                 android:textAppearance="@android:style/TextAppearance.Material.Title"
                 android:gravity="center"
+                android:maxLines="2"
+                android:ellipsize="end"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 app:layout_constraintEnd_toStartOf="@+id/edit_view_favorite"
